syntax = "proto3";

package api.blog.system.v1;

option go_package = "github.com/Shemistan/Blog/pkg/blog.v1";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

service BlogV1 {

  rpc AddNoteV1(AddNoteV1Request) returns (AddNoteV1Response) {
    option (google.api.http) = {
      post: "/note/v1/add"
      body: "*"
    };
  }

  rpc ListNotesV1(google.protobuf.Empty) returns (ListNotesV1Response){
    option (google.api.http) = {
      post: "/note/v1/list"
      body: "*"
    };
  }
}


message AddNoteV1Request{
  string title = 1;
  string text = 2;
  string teg = 3;
}

message AddNoteV1Response{
  int64 id = 1;
}

message ListNotesV1Response{
  message Note {
    int64 id = 1;
    string title = 2;
    string text = 3;
    string tag =4;
    int64 creating_data =5;
  }

  repeated Note notes = 1;
}